<resources>
    <string name="app_name">CMS</string>
    <string name="tab_text_1">Add</string>
    <string name="tab_text_2">Display</string>
    <string name="tab_text_3">Edit</string>
    <string name="tab_text_4">Delete</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="phone_no">Mobile Number</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
</resources>
